methods.args.MethodsArgs.scala.code
def move (stepCount:Int, goForward:boolean)={
  if (goForward==true){
    for (stepper <- 1 to stepCount){
      forward()
    }else{
      backward()
    }
  }
}